<resources>
    <string name="app_name">Messanger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="user">Users</string>
    <string name="messenger">Messenger</string>
    <string name="profile">Profile</string>
    <string name="no_friends">No friends</string>

    <string name="message_notification_channel_id">message_notification</string>
    <string name="default_notification_channel_id">message_notification</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="change_username">Change username</string>
    <string name="change_email">Change email</string>
    <string name="notifications">Notifications</string>
    <string name="items">Items:</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="repeat_new_password">Repeat new password</string>

    <string name="friend_req_sent">Friend request has been sent</string>
    <string name="friend_req">Friend request</string>
    <string name="wants_add_u">wants add you as a friend</string>
    <string name="no_notifications">No notifications</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email">Enter email</string>
    <string name="photos">Photos</string>
</resources>