<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ShapeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/LabelStyle"
        android:text="@string/password"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/password"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress" />

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:background="@drawable/shaper_rectangle_main_color"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:background="@drawable/shaper_rectangle_main_color"
            android:text="@string/cancel" />
    </FrameLayout>
</LinearLayout>
