<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.screens.EditProfileFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/edit_profile_fragment_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="#2C2C2C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_profile_fragment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_fragment_image"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_fragment_image"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_fragment_image" />

    <Button
        android:id="@+id/edit_profile_fragment_submit_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_username"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_fragment_username"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_fragment_username"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_fragment_username" />

    <EditText
        android:id="@+id/edit_profile_fragment_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_fragment_submit_changes_button"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_fragment_submit_changes_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_fragment_submit_changes_button" />


    <EditText
        android:id="@+id/edit_profile_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_new_password"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_new_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_new_password" />

    <EditText
        android:id="@+id/edit_profile_fragment_repeat_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/repeat_old_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_old_password"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_old_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_old_password" />

    <Button
        android:id="@+id/edit_profile_fragment_submit_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_fragment_repeat_old_password"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_fragment_repeat_old_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_fragment_repeat_old_password" />

    <Button
        android:id="@+id/edit_profile_fragment_change_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_email"
        app:layout_constraintEnd_toEndOf="@+id/submit_email_change"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/submit_email_change"
        app:layout_constraintTop_toBottomOf="@+id/submit_email_change" />

    <EditText
        android:id="@+id/submit_email_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_fragment_email"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_fragment_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_fragment_email" />

    <EditText
        android:id="@+id/edit_profile_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_fragment_change_email_button"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_fragment_change_email_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_fragment_change_email_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>